// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connect basic 1`] = `
<div>
  <p>
    foo: 
    FOO
  </p>
  <p>
    bar: 
    0
  </p>
  <p>
    hey: 
    Hey!
  </p>
</div>
`;

exports[`connect basic with dispatchToProps 1`] = `
<div
  onClick={[Function]}
>
  <p>
    disp: 
    10
  </p>
  <div>
    <p>
      foo: 
      FOO
    </p>
    <p>
      bar: 
      0
    </p>
    <p>
      hey: 
      Hooy!
    </p>
  </div>
</div>
`;

exports[`connect dispatch is connected to store 1`] = `
<div
  onClick={[Function]}
>
  <p>
    disp: 
    10
  </p>
  <div>
    <p>
      foo: 
      FOO
    </p>
    <p>
      bar: 
      0
    </p>
    <p>
      hey: 
      Hooy!
    </p>
  </div>
</div>
`;

exports[`connect dispatch is connected to store 2`] = `
<div
  onClick={[Function]}
>
  <p>
    disp: 
    10
  </p>
  <div>
    <p>
      foo: 
      Foooo
    </p>
    <p>
      bar: 
      100
    </p>
    <p>
      hey: 
      Hooy!
    </p>
  </div>
</div>
`;

exports[`connect reacts to state change 1`] = `
<div>
  <p>
    foo: 
    FOO
  </p>
  <p>
    bar: 
    0
  </p>
  <p>
    hey: 
    Hey!
  </p>
</div>
`;

exports[`connect reacts to state change 2`] = `
<div>
  <p>
    foo: 
    風呂
  </p>
  <p>
    bar: 
    123
  </p>
  <p>
    hey: 
    Hey!
  </p>
</div>
`;
